# tdog-cli

./: .gitignore  Cargo.toml  LICENSE  readme.md
crates/stripe_client/: Cargo.toml
crates/stripe_client/src/: lib.rs
crates/stripe_client/src/http/: http.rs  mod.rs  trait_param_meta.rs
crates/stripe_client/src/types/: impl_traits.rs  mod.rs  req_params.rs  responses.rs  types.rs
crates/tdog_cli/: Cargo.toml
crates/tdog_cli/sh/: build-dev.sh  cli-test.sh  watch.sh
crates/tdog_cli/src/: log_config.rs  main.rs  test_parse_json.rs
crates/tdog_core/: Cargo.toml
crates/tdog_core/src/: fns.rs  lib.rs  util.rs
crates/tdog_core/src/providers/: mod.rs  traits.rs
crates/tdog_core/src/providers/stripe/: apply_events.rs  dl.rs  mod.rs  queue-note-2.md  queue.rs  rate_limit.rs  schema_meta.rs  sigma-schema.md  watch.rs
crates/tdog_core/src/providers/stripe/schema/: list-relations.js  mod.rs  relations-readme.md  relations.json  relations.rs  util.rs
crates/tdog_core/src/providers/stripe/schema/types/: balance_transaction.rs  bank_account.rs  card.rs  charge.rs  coupon.rs  credit_note.rs  credit_note_line_item.rs  customer.rs  discount.rs  dispute.rs  invoice.rs  invoice_line_item.rs  invoiceitem.rs  mod.rs  notification_event.rs  order.rs  order_return.rs  payment_intent.rs  payment_method.rs  plan.rs  price.rs  product.rs  promotion.rs  refund.rs  session.rs  setup_intent.rs  sku.rs  source.rs  subscription.rs  subscription_item.rs  subscription_schedule.rs  tax_id.rs  tax_rate.rs
crates/tdog_core/src/tests/: mod.rs  test.rs
crates/tdog_core/src/tests/stripe/: mod.rs  util.rs
crates/tdog_core/src/tests/stripe/event_seq/: mod.rs
crates/tdog_core/src/tests/stripe/event_seq/all/: charge_refund_1.rs  credit_note_1.rs  customer_1.rs  customer_payment_intent_1.rs  customer_payment_method_1.rs  customer_payment_method_2.rs  customer_setup_intent_1.rs  customer_setup_intent_2.rs  customer_source_1.rs  customer_source_2.rs  discount_2.rs  invoice_1.rs  invoice_2.rs  invoice_3.rs  mod.rs  order_1.rs  session_1.rs  subscription_1.rs  tax_rate_1.rs
crates/tdog_core/src/tests/stripe/event_seq/data/charge_refund_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/charge_refund_1/downloads/: dl-step-0.sqlite  dl-step-1.sqlite  dl-step-2.sqlite  dl-step-3.sqlite
crates/tdog_core/src/tests/stripe/event_seq/data/credit_note_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/credit_note_1/downloads/: dl-step-0.sqlite  dl-step-1.sqlite  dl-step-2.sqlite  dl-step-3.sqlite
crates/tdog_core/src/tests/stripe/event_seq/data/customer_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_1/downloads/: dl-step-0.sqlite  dl-step-1.sqlite  dl-step-2.sqlite  dl-step-3.sqlite
crates/tdog_core/src/tests/stripe/event_seq/data/customer_payment_intent_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_payment_intent_1/downloads/: dl-step-0.sqlite  dl-step-1.sqlite  (+5 more)
crates/tdog_core/src/tests/stripe/event_seq/data/customer_payment_method_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_payment_method_2/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_setup_intent_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_setup_intent_2/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_source_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/customer_source_2/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/discount_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/discount_2/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/discount_3/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/invoice_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/invoice_2/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/invoice_3/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/order_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/session_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/subscription_1/: meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/data/tax_rate_1/: events.json  meta.json  steps.md
crates/tdog_core/src/tests/stripe/event_seq/notes/: how-testing-works.md  queries.md
crates/tdog_core/src/tests/stripe/event_seq/remaining/: all-event-data-types.txt  event-types.txt  ls-download-types.sh  ls-event-types.sh  next.txt  readme.md  sigma-tables-28.txt  sigma-tables-43.txt  td-next-tables.txt
crates/tdog_core/src/tests/stripe/notes/: api-issues.md  api-notes.md  apply-events.md  readme.md
crates/unicon/: Cargo.toml
crates/unicon/notes/: alternatives.md  choosing-db-libs.md  readme.md  todo.md
crates/unicon/sh/: macro-backtrace.sh  mysql-log-all-queries.sh  start-mysql-docker.sh  start-postgres-docker.sh  watch.sh
crates/unicon/sh/tls/: generate.sh  notes.md
crates/unicon/sh/tls/dev-keys/: ssl-cert-snakeoil.crt  ssl-cert-snakeoil.key  ssl-cert-snakeoil.pem
crates/unicon/src/: dt.rs  dt3.rs  jo.rs  lib.rs  params.rs  table.rs  traits.rs  uc.rs  utx.rs
crates/unicon/src/data/: mysql.rs  postgres.rs
crates/unicon/src/engines/: mod.rs  mysql.rs  placeholder.rs  postgres.rs  sqlite.rs
crates/unicon/tests/: test.rs  test_db.rs  test_mysql.rs  util.rs
crates/unicon_proc_macro/: Cargo.toml
crates/unicon_proc_macro/src/: lib.rs
(+115 files in other folders)
