
            [package]
            name = "stripe_client"
            version = "0.0.0"
            authors = ["Enzo <enzo.dev.uk@gmail.com>"]
            edition = "2018"
            publish = false
            license = "MIT"
            
            [dependencies]
            log = "0.4.11"
            rand = "0.8.0"
            chrono = "0.4"

            serde = {version = "1.0.117", features = ["derive"] }
            serde_json = "1.0.59"

            async-stream = "0.3.0"
            futures-util = "0.3.8"
            futures-core = "0.3.8"
            tokio = { version = "0.2", features = ["full"] }


            reqwest = { version = "0.10", features = ["json", "gzip", "brotli", "trust-dns"] }
        