[package]
name = "tdog_cli"
# Note: also grep for `const VERSION` (cannot be read due to cargo's DAG which contains no cycles).
version = "0.7.0"
authors = ["Enzo <enzo.dev.uk@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4"
regex = "1"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.11"
#env_logger = "0.8.2"
#fern = "0.5"
colored = "2"
atty = "0.2"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
#tokio = { version = "1.14", features = ["full"] }

# @todo/low Wrap this up using the `uc_lib` Cargo module (ensure correct versions, allow creating a new UniCon without external types).
rusqlite = { version = "0.25.3", features = ["bundled", "backup"] }


tdog_core = { path = "../tdog_core" }
unicon = {path = "./../unicon"}
stripe_client = {path = "./../stripe_client"}
