[package]
name = "unicon_proc_macro"
version = "0.0.0"
authors = ["Enzo <enzo.dev.uk@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

# This is not part of the `unicon` package/crate because `proc-macro`'s must be the only thing in a crate (as they are compiler plugins).
# https://stackoverflow.com/a/56714256/4949386
[lib]
proc-macro = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pin `syn` to avoid breaking change error:, "use syn::export::TokenStream2; could not find `export`".
syn = { version = "=1.0.57", features = ["full", "extra-traits"]}
quote = "1.0"
lazy_static = "1.4.0"
regex = "1"

unicon = { path = "./../unicon" }
#proc-macro2 = "0.4"